--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -3,6 +3,14 @@
 * Copyright 2013-2016 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
 */
+@font-face {font-family: "Microsoft Tai Le";
+    src: url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.eot");
+    src: url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.eot?#iefix") format("embedded-opentype"),
+    url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.woff2") format("woff2"),
+    url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.woff") format("woff"),
+    url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.ttf") format("truetype"),
+    url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.svg#Microsoft Tai Le") format("svg");
+}
 
 body {
     width: 100%;
@@ -14,15 +22,6 @@ html {
     height: 100%;
 }
 
-
-@import url(//db.onlinewebfonts.com/c/ff43e14bdcc67883fbd7a6f6223920cc?family=Microsoft+Tai+Le);
-
-
-@font-face {font-family: "Microsoft Tai Le";
-    src: url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.eot");
-    src: url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.eot?#iefix") format("embedded-opentype"),
-    url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.ttf") format("truetype");
-}
 /* .navbar-inverse .navbar-nav > .active > a:focus {
 background: rgba(0, 0, 0);
 border-bottom: 3px solid white;
@@ -47,7 +46,7 @@ border-bottom: 3px solid white;
 }
 
 p.intro-text {
-    font-family: "Avenir Next" !important;
+    font-family: 'Muli', sans-serif !important;
     font-size: 22px;
     letter-spacing: -1px;
     text-align: center;
@@ -62,7 +61,7 @@ p.intro-text {
     height: 50px;
     border: none;
     border-radius: 2px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.95);
     padding-top: 5px;
     margin-top: 66px;
     color: #000000;
@@ -102,7 +101,7 @@ p.reduction-dimpots {
 /*ENDOF full widht banner end of home page*/
 
 p {
-    font-family: "Avenir Next" !important;
+    font-family: 'Muli', sans-serif !important;
     font-size: 20px;
     object-fit: contain;
     letter-spacing: -0.83px;
@@ -117,7 +116,7 @@ p {
 .date-date,
 .date-lieu,
 .date-infos-carte {
-    font-family: "Avenir Next";
+    font-family: 'Muli', sans-serif !important;
     font-size: 14px;
     color: #000;
 }
@@ -128,7 +127,7 @@ p {
 
 .date-jour {
     margin-top: 12px;
-    font-family: "Avenir Next";
+    font-family: 'Muli', sans-serif !important;
     font-size: 24px;
     color: #000;
     font-weight: 600;
@@ -138,7 +137,7 @@ p {
 
 .date-mois {
     ;
-    font-family: "Avenir Next";
+    font-family: 'Muli', sans-serif !important;
     font-size: 14px;
     font-weight: 600;
     letter-spacing: -0.6px;
@@ -176,7 +175,7 @@ ul.production li {
 }
 
 ul.production {
-    font-family: "Avenir Next" !important;
+    font-family: 'Muli', sans-serif !important;
     font-size: 18px;
     object-fit: contain;
     letter-spacing: -0.83px;
@@ -300,7 +299,7 @@ p a:visited {
 }
 
 h1 {
-    font-family: "Avenir Next" !important;
+    font-family: 'Muli', sans-serif !important;
     font-size: 26px;
     letter-spacing: -0.83px;
     font-weight: 600;
@@ -310,7 +309,7 @@ h1 {
 }
 
 h2 {
-    font-family: "Avenir Next" !important;
+    font-family: 'Muli', sans-serif !important;
     font-size: 24px;
     font-weight: 600;
     color: #eee;
@@ -319,7 +318,7 @@ h2 {
 }
 
 h3 {
-    font-family: "Avenir Next" !important;
+    font-family: 'Muli', sans-serif !important;
     font-size: 20px;
     font-weight: 600;
     color: #eee;
@@ -328,7 +327,29 @@ h3 {
 }
 
 
+.field-mail{
+  width:70%; 
+  float: left; 
+}
 
+.field-message{
+    width:100%;
+    min-height: 100px;
+}
+
+.btn-envoyer{
+    float: left;
+        border-radius: 3px;
+    width: 80px;
+    height: 30px;
+    color: #fff;
+    font-family: "Microsoft Tai Le" !important;
+    font-size: 14px;
+    text-decoration: none;
+    outline: none;
+    vertical-align: middle;
+    background: #f72c2f;
+}
 /**
 .modal-dialog {
   width: 80%;
@@ -357,16 +378,21 @@ h3 {
         padding: 0;
     }
     .home-section {
-        background: url('./../media/images/back-sm.jpg');
-        background-attachment: scroll;
-        background-size: cover;
-        background-position: center center;
+         height: 100%;
+    padding-top: 150px;
+    background: url('./../media/images/back-sm.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     }
     .banner {
         height: 35%;
     }
     p.intro-text {
-        font-family: "Avenir Next" !important;
+    font-family: 'Muli', sans-serif !important;
         font-size: 21px;
         letter-spacing: -1px;
         text-align: center;
@@ -396,10 +422,38 @@ h3 {
     ul.production {
 font-size: 16px;
     }
+
+.affiche-satyre{
+    max-height: 420px;
+    display: block;
+    margin: 20 auto;
+}
+    .field-mail{
+  width:100%; 
+}
+
+.field-message{
+    width:100%;
+}
+
+
 }
 
 @media(min-width:768px) {
     /* For bigger than 768: */
+
+    .home-section {
+    height: 100%;
+    padding-top: 150px;
+    background: url('./../media/images/back-md.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
     .banner {
         position: absolute;
         bottom: 0;
@@ -409,11 +463,41 @@ font-size: 16px;
         background-color: rgba(0, 0, 0, 0.67);
         /* text-align: center;*/
     }
+
+    .affiche-satyre{
+    max-height: 420px;
+    margin-top: 20;
+}
+.animation-element {
+  opacity: 0;
+  position: relative;
+}
+/*animation element sliding left*/
+
+.animation-element.slide-left {
+  opacity: 0.5;
+  -moz-transition: all 300ms linear;
+  -webkit-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
+  transition: all 300ms linear;
+  -moz-transform: translate3d(80px, 0px, 0px);
+  -webkit-transform: translate3d(80px, 0px, 0px);
+  -o-transform: translate(80px, 0px);
+  -ms-transform: translate(80px, 0px);
+  transform: translate3d(80px, 0px, 0px);
 }
 
-.home-section {
-    background-attachment: fixed;
+.animation-element.slide-left.in-view {
+  opacity: 1;
+  -moz-transform: translate3d(0px, 0px, 0px);
+  -webkit-transform: translate3d(0px, 0px, 0px);
+  -o-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  transform: translate3d(0px, 0px, 0px);
 }
+}
+
+
 
 @media(min-width:992px) {
     /* For bigger than 1200: */
@@ -605,21 +689,15 @@ a.socialIcon:hover, .socialHoverClass {
 }
 
 
+
+/*.home-section {
+    background-attachment: fixed;
+}*/
+
 /* Demo Sections - You can use these as guides or delete them - the scroller will work with any sort of height, fixed, undefined, or percentage based.
 The padding is very important to make sure the scrollspy picks up the right area when scrolled to. Adjust the margin and padding of sections and children
 of those sections to manage the look and feel of the site. */
 
-.home-section {
-    height: 100%;
-    padding-top: 150px;
-    background: url('./../media/images/back-md.jpg');
-    background-repeat: no-repeat;
-    background-position: center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
 
 .actu-section {
     padding-top: 40px;
@@ -667,10 +745,6 @@ of those sections to manage the look and feel of the site. */
             border: 1px solid #ccc;
         }
 
-.affiche-satyre{
-    margin-top: 20px;
-    max-height: 420px;
-}
 
 /**
 * AddToCalendar Blue Style
@@ -751,7 +825,7 @@ of those sections to manage the look and feel of the site. */
     margin: 0;
     padding: 7px 20px 6px 20px;
     color: #fff;
-    font-family: "Avenir Next";
+    font-family: 'Muli', sans-serif !important;
     font-size: 12px;
     font-weight: 500;
     text-decoration: none;
