--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -110,6 +110,14 @@ p {
     padding-top: 5px;
 }
 
+span.etplus{
+    font-family: 'Muli', sans-serif !important;
+    font-size: 14px;
+    object-fit: contain;
+    letter-spacing: -0.83px;
+    color: #ffffff;
+}
+
 .date,
 .date-lieu,
 .date-piece,
@@ -220,6 +228,7 @@ font-style: italic;
 }
 
 .dates-passees ul{
+        color: #fff;
         list-style: none;
         text-align: left;
 }
@@ -700,30 +709,34 @@ of those sections to manage the look and feel of the site. */
 
 
 .actu-section {
-    padding-top: 40px;
-    text-align: center;
-    background: #050505;
+    padding-top: 20px;
+    padding-bottom: 20px;
+background: #020202;
 }
 
 .creations-section {
-    padding-top: 40px;
-    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
     background: #000;
 }
 
 .compagnie-section {
-    padding-top: 40px;
-    text-align: center;
-    background: #050505;
+   padding-top: 20px;
+    padding-bottom: 20px;
+background: #020202;
+
 }
 
 .contact-section {
-    padding-top: 40px;
-    text-align: center;
+   padding-top: 20px;
+    padding-bottom: 20px;
     background: #000;
 }
 
-
+address { 
+    display: block;
+    font-style: italic;
+}
 
 /* Fancybox */
 .hidden {
