--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -47,7 +47,7 @@ border-bottom: 3px solid white;
 
 p.intro-text {
     font-family: 'Muli', sans-serif !important;
-    font-size: 22px;
+    font-size: 20px;
     letter-spacing: -1px;
     text-align: center;
     color: #ffffff;
@@ -387,7 +387,7 @@ h3 {
         padding: 0;
     }
     .home-section {
-         height: 100%;
+          height:calc(100% - 2em);
     padding-top: 150px;
     background: url('./../media/images/back-sm.jpg');
     background-repeat: no-repeat;
@@ -398,11 +398,11 @@ h3 {
     background-size: cover;
     }
     .banner {
-        height: 35%;
+        height: 40%;
     }
     p.intro-text {
     font-family: 'Muli', sans-serif !important;
-        font-size: 21px;
+        font-size: 20px;
         letter-spacing: -1px;
         text-align: center;
         color: #ffffff;
@@ -452,7 +452,7 @@ font-size: 16px;
     /* For bigger than 768: */
 
     .home-section {
-    height: 100%;
+   height:calc(100% - 2em);
     padding-top: 150px;
     background: url('./../media/images/back-md.jpg');
     background-repeat: no-repeat;
@@ -466,8 +466,8 @@ font-size: 16px;
     .banner {
         position: absolute;
         bottom: 0;
-        height: 28%;
-        min-height: 28%;
+        height: 35%;
+        min-height: 33%;
         width: 100%;
         background-color: rgba(0, 0, 0, 0.67);
         /* text-align: center;*/
@@ -894,3 +894,73 @@ address {
 .atc-style-blue .atcb-item:hover {
     background: #d31108;
 }
+
+
+
+/* arrow scroll */
+
+.arrow-wrap {
+  position:absolute;
+  z-index:1;
+  left:50%;
+  top:-5em;
+  margin-left:-5em;
+  background:#111111;
+  width:10em;
+  height:10em;
+  padding:4em 2em;
+  border-radius:50%;
+  font-size:0.5em;
+  display:block;
+  box-shadow:0px 0px 5px 0px #333;
+}
+
+.arrow {
+  float:left;
+  position:relative;
+  width: 0px;
+height: 0px;
+border-style: solid;
+border-width: 3em 3em 0 3em;
+border-color: #ffffff transparent transparent transparent;
+  -webkit-transform:rotate(360deg)
+}
+
+.arrow:after {
+  content:'';
+  position:absolute;
+  top:-3.2em;
+  left:-3em;
+  width: 0px;
+height: 0px;
+border-style: solid;
+border-width: 3em 3em 0 3em;
+border-color: #111111 transparent transparent transparent;
+  -webkit-transform:rotate(360deg)
+}
+
+
+.arrow-wrap:hover .hint {
+  opacity:1;
+}
+
+
+  @-webkit-keyframes arrows {
+    0% { top:0; }
+    10% { top:12%; }
+    20% { top:0; }
+    30% { top:12%; }
+    40% { top:-12%; }
+    50% { top:12%; }
+    60% { top:0; }
+    70% { top:12%; }
+    80% { top:-12%; }
+    90% { top:12%; }
+    100% { top:0; }
+  }
+  
+  .arrow-wrap .arrow {
+    -webkit-animation: arrows 2.8s 0.4s;
+    -webkit-animation-delay: 3s;
+  }
+
