--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -3,13 +3,11 @@
 * Copyright 2013-2016 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
 */
-@font-face {font-family: "Microsoft Tai Le";
+
+@font-face {
+    font-family: "Microsoft Tai Le";
     src: url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.eot");
-    src: url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.eot?#iefix") format("embedded-opentype"),
-    url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.woff2") format("woff2"),
-    url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.woff") format("woff"),
-    url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.ttf") format("truetype"),
-    url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.svg#Microsoft Tai Le") format("svg");
+    src: url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.woff") format("woff"), url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/ff43e14bdcc67883fbd7a6f6223920cc.svg#Microsoft Tai Le") format("svg");
 }
 
 body {
@@ -21,6 +19,7 @@ html {
     width: 100%;
     height: 100%;
 }
+
 
 /* .navbar-inverse .navbar-nav > .active > a:focus {
 background: rgba(0, 0, 0);
@@ -54,7 +53,6 @@ p.intro-text {
     margin-top: 20px;
     word-wrap: break-word;
 }
-
 
 .btn-nous-soutenir {
     width: 220px;
@@ -110,7 +108,7 @@ p {
     padding-top: 5px;
 }
 
-span.etplus{
+span.etplus {
     font-family: 'Muli', sans-serif !important;
     font-size: 14px;
     object-fit: contain;
@@ -154,10 +152,10 @@ span.etplus{
 }
 
 .date-lieu {
-   font-weight: 600;
+    font-weight: 600;
 }
 
-.date-heure{
+.date-heure {
     font-weight: 600;
 }
 
@@ -212,25 +210,25 @@ p.production {
     font-size: 18px;
 }
 
-.label-equipe-crea{
-font-weight: bold;
-font-style: italic;
+.label-equipe-crea {
+    font-weight: bold;
+    font-style: italic;
 }
 
 .modal-header {
     background-color: rgba(0, 0, 0, 1);
-   color: #fff;
+    color: #fff;
 }
 
 .modal-body {
     background-color: rgba(0, 0, 0, 1);
-       color: #fff;
+    color: #fff;
 }
 
-.dates-passees ul{
-        color: #fff;
-        list-style: none;
-        text-align: left;
+.dates-passees ul {
+    color: #fff;
+    list-style: none;
+    text-align: left;
 }
 
 p.bio {
@@ -245,48 +243,45 @@ span.name-autres {
     font-size: 16px;
     font-weight: bold;
     color: rgba(220, 35, 35, 1);
-
 }
+
+
 /*modal close button*/
+
 .close {
-    color: #fff; 
+    color: #fff;
     opacity: 1;
 }
 
-.circle-avatar{
-/* make it responsive */
-
-height:auto;
-display:block;
-/* div height to be the same as width*/
-padding-top:100%;
-
-/* make it a cirkle */
-border-radius:50%;
-
-/* Centering on image`s center*/
-background-position-y: center;
-background-position-x: center;
-background-repeat: no-repeat;
-
-/* it makes the clue thing, takes smaller dimention to fill div */
-background-size: cover;
-
-/* it is optional, for making this div centered in parent*/
-margin: 0 auto;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
+.circle-avatar {
+    /* make it responsive */
+    height: auto;
+    display: block;
+    /* div height to be the same as width*/
+    padding-top: 100%;
+    /* make it a cirkle */
+    border-radius: 50%;
+    /* Centering on image`s center*/
+    background-position-y: center;
+    background-position-x: center;
+    background-repeat: no-repeat;
+    /* it makes the clue thing, takes smaller dimention to fill div */
+    background-size: cover;
+    /* it is optional, for making this div centered in parent*/
+    margin: 0 auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
-.logo-partner{
- height:auto;
- max-width: 100px;
- padding-top: 20px;
+.logo-partner {
+    height: auto;
+    max-width: 100px;
+    padding-top: 20px;
 }
 
-.caption-partenaire{
+.caption-partenaire {
     font-size: 14px;
 }
 
@@ -335,20 +330,19 @@ h3 {
     padding-top: 20px;
 }
 
-
-.field-mail{
-  width:70%; 
-  float: left; 
+.field-mail {
+    width: 70%;
+    float: left;
 }
 
-.field-message{
-    width:100%;
+.field-message {
+    width: 100%;
     min-height: 100px;
 }
 
-.btn-envoyer{
+.btn-envoyer {
     float: left;
-        border-radius: 3px;
+    border-radius: 3px;
     width: 80px;
     height: 30px;
     color: #fff;
@@ -359,15 +353,16 @@ h3 {
     vertical-align: middle;
     background: #f72c2f;
 }
+
+
 /**
 .modal-dialog {
-  width: 80%;
-  height: 100%;
+width: 80%;
+height: 100%;
 }
-
 .modal-content {
-  height: auto;
-  min-height: 100%;
+height: auto;
+min-height: 100%;
 }*/
 
 @media (max-width: 768px) {
@@ -387,21 +382,21 @@ h3 {
         padding: 0;
     }
     .home-section {
-          height:calc(100% - 3em);
-    padding-top: 150px;
-    background: url('./../media/images/back-sm.jpg');
-    background-repeat: no-repeat;
-    background-position: center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+        height: calc(100% - 3em);
+        padding-top: 150px;
+        background: url('./../media/images/back-sm.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
     }
     .banner {
         height: 40%;
     }
     p.intro-text {
-    font-family: 'Muli', sans-serif !important;
+        font-family: 'Muli', sans-serif !important;
         font-size: 20px;
         letter-spacing: -1px;
         text-align: center;
@@ -429,40 +424,34 @@ h3 {
         font-size: 14px;
     }
     ul.production {
-font-size: 16px;
+        font-size: 16px;
     }
-
-.affiche-satyre{
-    max-height: 420px;
-    display: block;
-    margin: 20 auto;
-}
-    .field-mail{
-  width:100%; 
-}
-
-.field-message{
-    width:100%;
-}
-
-
+    .affiche-satyre {
+        max-height: 420px;
+        display: block;
+        margin: 20 auto;
+    }
+    .field-mail {
+        width: 100%;
+    }
+    .field-message {
+        width: 100%;
+    }
 }
 
 @media(min-width:768px) {
     /* For bigger than 768: */
-
     .home-section {
-   height:calc(100% - 3em);
-    padding-top: 150px;
-    background: url('./../media/images/back-md.jpg');
-    background-repeat: no-repeat;
-    background-position: center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
+        height: calc(100% - 3em);
+        padding-top: 150px;
+        background: url('./../media/images/back-md.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
     .banner {
         position: absolute;
         bottom: 0;
@@ -472,41 +461,36 @@ font-size: 16px;
         background-color: rgba(0, 0, 0, 0.67);
         /* text-align: center;*/
     }
-
-    .affiche-satyre{
-    max-height: 420px;
-    margin-top: 20;
+    .affiche-satyre {
+        max-height: 420px;
+        margin-top: 20;
+    }
+    .animation-element {
+        opacity: 0;
+        position: relative;
+    }
+    /*animation element sliding left*/
+    .animation-element.slide-left {
+        opacity: 0.5;
+        -moz-transition: all 300ms linear;
+        -webkit-transition: all 300ms linear;
+        -o-transition: all 300ms linear;
+        transition: all 300ms linear;
+        -moz-transform: translate3d(80px, 0px, 0px);
+        -webkit-transform: translate3d(80px, 0px, 0px);
+        -o-transform: translate(80px, 0px);
+        -ms-transform: translate(80px, 0px);
+        transform: translate3d(80px, 0px, 0px);
+    }
+    .animation-element.slide-left.in-view {
+        opacity: 1;
+        -moz-transform: translate3d(0px, 0px, 0px);
+        -webkit-transform: translate3d(0px, 0px, 0px);
+        -o-transform: translate(0px, 0px);
+        -ms-transform: translate(0px, 0px);
+        transform: translate3d(0px, 0px, 0px);
+    }
 }
-.animation-element {
-  opacity: 0;
-  position: relative;
-}
-/*animation element sliding left*/
-
-.animation-element.slide-left {
-  opacity: 0.5;
-  -moz-transition: all 300ms linear;
-  -webkit-transition: all 300ms linear;
-  -o-transition: all 300ms linear;
-  transition: all 300ms linear;
-  -moz-transform: translate3d(80px, 0px, 0px);
-  -webkit-transform: translate3d(80px, 0px, 0px);
-  -o-transform: translate(80px, 0px);
-  -ms-transform: translate(80px, 0px);
-  transform: translate3d(80px, 0px, 0px);
-}
-
-.animation-element.slide-left.in-view {
-  opacity: 1;
-  -moz-transform: translate3d(0px, 0px, 0px);
-  -webkit-transform: translate3d(0px, 0px, 0px);
-  -o-transform: translate(0px, 0px);
-  -ms-transform: translate(0px, 0px);
-  transform: translate3d(0px, 0px, 0px);
-}
-}
-
-
 
 @media(min-width:992px) {
     /* For bigger than 1200: */
@@ -539,7 +523,7 @@ font-size: 16px;
         text-align: center;
         color: #ffffff;
     }
-    .nav li.dropdown a:hover{
+    .nav li.dropdown a:hover {
         border-bottom: none;
     }
     .nav li a:link {
@@ -554,15 +538,14 @@ font-size: 16px;
         /*background: rgba(0, 0, 0);*/
         border-bottom: 3px solid white;
     }
-.dropdown-menu>li>a, .dropdown-menu {
-    background-color: #000;
-    color: #fff;
-}
-
-.dropdown-menu{
-    width: 140px !important;
-}
-
+    .dropdown-menu>li>a,
+    .dropdown-menu {
+        background-color: #000;
+        color: #fff;
+    }
+    .dropdown-menu {
+        width: 140px !important;
+    }
     /*full widht banner end of home page*/
 }
 
@@ -616,72 +599,90 @@ overflow: hidden!important;
 
 
 /*=========================
-  Icons
- ================= */
+Icons
+================= */
+
 
 /* footer social icons */
+
 ul.social-network {
     list-style: none;
     display: inline;
-    margin-left:0 !important;
+    margin-left: 0 !important;
     padding: 0;
 }
+
 ul.social-network li {
     display: inline;
     margin: 0 5px;
 }
 
-.logo-contact{
+.logo-contact {
     text-align: center;
 }
 
 
 /* footer social icons */
+
 .social-network a.icoRss:hover {
     background-color: #F56505;
 }
+
 .social-network a.icoFacebook:hover {
-    background-color:#3B5998;
+    background-color: #3B5998;
 }
+
 .social-network a.icoTwitter:hover {
-    background-color:#33ccff;
+    background-color: #33ccff;
 }
+
 .social-network a.icoGoogle:hover {
-    background-color:#BD3518;
+    background-color: #BD3518;
 }
+
 .social-network a.icoVimeo:hover {
-    background-color:#0590B8;
+    background-color: #0590B8;
 }
+
 .social-network a.icoLinkedin:hover {
-    background-color:#007bb7;
+    background-color: #007bb7;
 }
-.social-network a.icoRss:hover i, .social-network a.icoFacebook:hover i, .social-network a.icoTwitter:hover i,
-.social-network a.icoGoogle:hover i, .social-network a.icoVimeo:hover i, .social-network a.icoLinkedin:hover i {
-    color:#fff;
+
+.social-network a.icoRss:hover i,
+.social-network a.icoFacebook:hover i,
+.social-network a.icoTwitter:hover i,
+.social-network a.icoGoogle:hover i,
+.social-network a.icoVimeo:hover i,
+.social-network a.icoLinkedin:hover i {
+    color: #fff;
 }
-a.socialIcon:hover, .socialHoverClass {
-    color:#44BCDD;
+
+a.socialIcon:hover,
+.socialHoverClass {
+    color: #44BCDD;
 }
 
 .social-circle li a {
-    display:inline-block;
-    position:relative;
-    margin:0 auto 0 auto;
-    -moz-border-radius:50%;
-    -webkit-border-radius:50%;
-    border-radius:50%;
-    text-align:center;
+    display: inline-block;
+    position: relative;
+    margin: 0 auto 0 auto;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    text-align: center;
     width: 50px;
     height: 50px;
-    font-size:20px;
+    font-size: 20px;
 }
+
 .social-circle li i {
-    margin:0;
-    line-height:50px;
+    margin: 0;
+    line-height: 50px;
     text-align: center;
 }
 
-.social-circle li a:hover i, .triggeredHover {
+.social-circle li a:hover i,
+.triggeredHover {
     -moz-transform: rotate(360deg);
     -webkit-transform: rotate(360deg);
     -ms--transform: rotate(360deg);
@@ -692,6 +693,7 @@ a.socialIcon:hover, .socialHoverClass {
     -ms-transition: all 0.2s;
     transition: all 0.2s;
 }
+
 .social-circle i {
     color: #fff;
     -webkit-transition: all 0.8s;
@@ -702,20 +704,19 @@ a.socialIcon:hover, .socialHoverClass {
 }
 
 
-
 /*.home-section {
-    background-attachment: fixed;
+background-attachment: fixed;
 }*/
+
 
 /* Demo Sections - You can use these as guides or delete them - the scroller will work with any sort of height, fixed, undefined, or percentage based.
 The padding is very important to make sure the scrollspy picks up the right area when scrolled to. Adjust the margin and padding of sections and children
 of those sections to manage the look and feel of the site. */
 
-
 .actu-section {
     padding-top: 20px;
     padding-bottom: 20px;
-background: #020202;
+    background: #020202;
 }
 
 .creations-section {
@@ -725,42 +726,43 @@ background: #020202;
 }
 
 .compagnie-section {
-   padding-top: 20px;
+    padding-top: 20px;
     padding-bottom: 20px;
-background: #020202;
-
+    background: #020202;
 }
 
 .contact-section {
-   padding-top: 20px;
+    padding-top: 20px;
     padding-bottom: 20px;
     background: #000;
 }
 
-address { 
+address {
     display: block;
     font-style: italic;
 }
 
+
 /* Fancybox */
+
 .hidden {
     display: none;
 }
 
 .imglist {
-            overflow: hidden;
-        }
+    overflow: hidden;
+}
 
-        .imglist a {
-            float: left;
-            margin: 4px;
-        }
+.imglist a {
+    float: left;
+    margin: 4px;
+}
 
-        .imglist a img {
-            vertical-align: top;
-            padding: 1px;
-            border: 1px solid #ccc;
-        }
+.imglist a img {
+    vertical-align: top;
+    padding: 1px;
+    border: 1px solid #ccc;
+}
 
 
 /**
@@ -896,71 +898,89 @@ address {
 }
 
 
-
 /* arrow scroll */
 
 .arrow-wrap {
-  position:absolute;
-  z-index:1;
-  left:50%;
-  top:-5em;
-  margin-left:-5em;
-  background:#111111;
-  width:10em;
-  height:10em;
-  padding:4em 2em;
-  border-radius:50%;
-  font-size:0.5em;
-  display:block;
-  box-shadow:0px 0px 5px 0px #333;
+    position: absolute;
+    z-index: 1;
+    left: 50%;
+    top: -5em;
+    margin-left: -5em;
+    background: #111111;
+    width: 10em;
+    height: 10em;
+    padding: 4em 2em;
+    border-radius: 50%;
+    font-size: 0.5em;
+    display: block;
+    box-shadow: 0px 0px 5px 0px #333;
 }
 
 .arrow {
-  float:left;
-  position:relative;
-  width: 0px;
-height: 0px;
-border-style: solid;
-border-width: 3em 3em 0 3em;
-border-color: #ffffff transparent transparent transparent;
-  -webkit-transform:rotate(360deg)
+    float: left;
+    position: relative;
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 3em 3em 0 3em;
+    border-color: #ffffff transparent transparent transparent;
+    -webkit-transform: rotate(360deg)
 }
 
 .arrow:after {
-  content:'';
-  position:absolute;
-  top:-3.2em;
-  left:-3em;
-  width: 0px;
-height: 0px;
-border-style: solid;
-border-width: 3em 3em 0 3em;
-border-color: #111111 transparent transparent transparent;
-  -webkit-transform:rotate(360deg)
+    content: '';
+    position: absolute;
+    top: -3.2em;
+    left: -3em;
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 3em 3em 0 3em;
+    border-color: #111111 transparent transparent transparent;
+    -webkit-transform: rotate(360deg)
 }
-
 
 .arrow-wrap:hover .hint {
-  opacity:1;
+    opacity: 1;
 }
 
+@-webkit-keyframes arrows {
+    0% {
+        top: 0;
+    }
+    10% {
+        top: 12%;
+    }
+    20% {
+        top: 0;
+    }
+    30% {
+        top: 12%;
+    }
+    40% {
+        top: -12%;
+    }
+    50% {
+        top: 12%;
+    }
+    60% {
+        top: 0;
+    }
+    70% {
+        top: 12%;
+    }
+    80% {
+        top: -12%;
+    }
+    90% {
+        top: 12%;
+    }
+    100% {
+        top: 0;
+    }
+}
 
-  @-webkit-keyframes arrows {
-    0% { top:0; }
-    10% { top:12%; }
-    20% { top:0; }
-    30% { top:12%; }
-    40% { top:-12%; }
-    50% { top:12%; }
-    60% { top:0; }
-    70% { top:12%; }
-    80% { top:-12%; }
-    90% { top:12%; }
-    100% { top:0; }
-  }
-  
-  .arrow-wrap .arrow {
+.arrow-wrap .arrow {
     -webkit-animation: arrows 2.8s 0.4s;
     -webkit-animation-delay: 3s;
-  }
-
+}
